[tool.poetry]
name = "miniogre"
version = "0.11.2"
description = "miniogre: from source code to reproducible environment, in seconds."
readme = "README.md"
authors = ["Wilder Lopes <wilder@ogre.run>"]
include = [
    { path = "miniogre/encodings", format = ["sdist", "wheel"] }
]
homepage = "https://github.com/ogre-run/miniogre"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
typer = "0.9.0"
docker = "^5.0.0"
python-dotenv = "^0.19.0"
openai = "1.21.2"
emoji = "^2.10.1"
pyfiglet = "^1.0.2"
rich = "^13.7.0"
groq = "0.5.0"
yaspin = "^3.0.1"
octoai-sdk = "^0.9.0"
mistralai = "^0.1.3"
autopep8 = "^2.0.4"
cyclonedx-py = "^1.0.1"
pip-licenses = "^4.3.4"
gptify = "^0.3.4"
tiktoken = "0.6.0"
google-generativeai = "0.5.2"
tzlocal = "^5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
miniogre = "miniogre.main:app"
